--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Polochtron</h1>
     <p>
-        Ceci est le début du bordel
+        Ceci est le début du bordel <br>
+        Voici notre magnifique prof : <br>
+        <a href="images/rv.png"></a>
     </p>
 </body>
 </html>
