--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>
         Ceci est le début du bordel <br>
         Voici notre magnifique prof : <br>
-        <a href="images/rv.png"></a>
+        <img src="images/rv.png" alt="image de rv">
     </p>
 </body>
 </html>
