--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test pour site</title>
 </head>
 <body>
-    <h1>Polochtron</h1>
+    <h1>Voici le  titre du test du site</h1>
     <p>
-        Ceci est le début du bordel <br>
-        Voici notre magnifique prof : <br>
-        <img src="images/rv.png" alt="image de rv">
+        Et un paragraphe
     </p>
 </body>
 </html>
