--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test pour site</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Jeu du plus ou moins</title>
 </head>
 <body>
-    <h1>Voici le  titre du test du site</h1>
-    <p>
-        Et un paragraphe
-    </p>
+    <h1>Voici mon jeu du plus ou moins</h1>
+    <div class="carre">
+        Test
+    </div>
 </body>
 </html>
