--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Voici mon jeu du plus ou moins</h1>
-    <div class="carre">
+    <div id="carre">
         Test
     </div>
 </body>
