--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Voici mon jeu du plus ou moins</h1>
-    <div id="carre">
-        <p>
+    <div class="carre">
+        <p class="centre">
             Test
         </p>
     </div>
