--- a/index.html
+++ b/index.html
@@ -12,5 +12,36 @@
             Test
         </p>
     </div>
+    <div id="carre">
+        <p id="centre">
+            Test
+        </p>
+    </div>
+    <div id="carre">
+        <p id="centre">
+            Test
+        </p>
+    </div>
+    <div id="carre">
+        <p id="centre">
+            Test
+        </p>
+    </div>
+    <br>
+    <div id="carre">
+        <p id="centre">
+            Test
+        </p>
+    </div>
+    <div id="carre">
+        <p id="centre">
+            Test
+        </p>
+    </div>
+    <div id="carre">
+        <p id="centre">
+            Test
+        </p>
+    </div>
 </body>
 </html>
