--- a/index.html
+++ b/index.html
@@ -7,39 +7,34 @@
 </head>
 <body>
     <h1>Voici mon jeu du plus ou moins</h1>
-    <div id="carre">
-        <p id="centre">
+    <div class="carre">
+        <p class="centre">
             Test
         </p>
     </div>
-    <div id="carre">
-        <p id="centre">
+    <div class="carre">
+        <p class="centre">
             Test
         </p>
     </div>
-    <div id="carre">
-        <p id="centre">
-            Test
-        </p>
-    </div>
-    <div id="carre">
-        <p id="centre">
+    <div class="carre">
+        <p class="centre">
             Test
         </p>
     </div>
     <br>
-    <div id="carre">
-        <p id="centre">
+    <div class="carre">
+        <p class="centre">
             Test
         </p>
     </div>
-    <div id="carre">
-        <p id="centre">
+    <div class="carre">
+        <p class="centre">
             Test
         </p>
     </div>
-    <div id="carre">
-        <p id="centre">
+    <div class="carre">
+        <p class="centre">
             Test
         </p>
     </div>
