--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <h1>Voici mon jeu du plus ou moins</h1>
         <div class="rectangle">
             <p>
-                Veuillez entrer un nombre entre 0 et 100 :
+                Veuillez entrer un nombre entre 0 et 1000 :
             </p>
             <br>
             <input id="rep" type="number" value="0">
             <br>
             <br>
-            <button>Comparer</button>
+            <button onclick="compare(this.value)">Comparer</button>
             <br>
             <p id="solution"></p>
         </div>
