--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
                 Veuillez entrer un nombre entre 0 et 1000 :
             </p>
             <br>
-            <input type="number" value="0">
+            <input id="rep" type="number" value="0">
             <br>
             <br>
-            <button onclick="compare(this)">Comparer</button>
+            <button onclick="compare()">Comparer</button>
             <br>
             <p id="solution"></p>
         </div>
